--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!--FONT STYLE LINK ADDED-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
   <!--FONT AWESOME LINK ADDED-->
   <script src="https://kit.fontawesome.com/3f656988f3.js" crossorigin="anonymous"></script>
   <!--FAVICON LINK ADDED-->
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="favicon.ico">
 
 
 
@@ -78,7 +78,7 @@
               class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img class="title-image" src="images/timely_taste_iphone.png" alt="iphone-mockup">
+          <img class="title-image" src="timely_taste_iphone.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -161,10 +161,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="mashable.png" alt="mashable-logo">
 
   </section>
 
