--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
+          <h2 class="name"></h2>
           <h1>Discover new food item's near You!</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>
             Download</button>
